# cpp-evolution

./: CMakeLists.txt  README.md
.github/workflows/: progress.yml
First-Contact/: printing_multiple_lines.cpp
LEVEL-1/: problem_1.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp
phase-1-foundations/: 06_count_digits.cpp  07_sum_of_digits.cpp  08_palindrome_number.cpp  09_multiplication_table.cpp  readme.md
phase-1.5-exploring-patterns/: 04_rectangle.cpp  05_more_on_right_triangle.cpp  06_number_pyramid.cpp  08_0_1_triangle.cpp  09_hollow_half_pyramid.cpp  10_hollow_pyramid.cpp  11_hollow_diamond.cpp  12_butterfly.cpp  13_sandglass.cpp  readme.md
phase-1.5-exploring-patterns/.github/workflow/: progress.yml
phase-2-mathematics/: 04_lcm.cpp  05_fibonnaci_generator.cpp  06_decimal_to_binary.cpp  07_pascal_triangle.cpp  08_factorial_without_recursion.cpp  09_strong_number.cpp  10_perfect_number.cpp  11_guessing_game.cpp  readme.md
phase-3-data-structures/: 01_second_largest_element.cpp  02_remove_duplicates.cpp  03_rotate_array.cpp  03_rotate_array_right.cpp  04_missing_number.cpp  05_move_zeros_to_end.cpp  06_kadane_algorithm.cpp  07_merge_two_sorted_array.cpp  08_binary_search.cpp  09_frequency_of_elements.cpp  10_buy-sell.cpp  11_anagrams.cpp  12_reverse_string.cpp  13_longest_word_in_sentence.cpp  14_consonants_and_vowels_count.cpp  15_remove_spaces.cpp  16_check_substrings_manually.cpp  17_String_compression.cpp  18_palindrome_substring_brute_force.cpp  readme.md
